--- a/On-demand-car-wash-system-frontend/package.json
+++ b/On-demand-car-wash-system-frontend/package.json
@@ -10,16 +10,18 @@
     "bootstrap": "^5.1.3",
     "cdbreact": "^1.5.1",
     "mdbreact": "^5.2.0",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-axios": "^2.0.5",
     "react-bootstrap": "^1.6.4",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.14.0",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^3.4.1",
-    "react-toastify": "^8.1.0",
     "react-s-alert": "^1.4.1",
+    "react-scripts": "^3.4.1",
+    "react-social-login-buttons": "^3.6.0",
+    "react-toastify": "^8.1.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
